{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 11,
  "lineage": "e06409a3-f313-b52f-f824-6d6bddca0672",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/networkInterfaces/dev-vm-nic-0",
            "internal_domain_name_suffix": "rbt4mbgh3jcetkmgexmkyq2ccg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "dev-vm-nic-0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "dev-rg-web"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/networkInterfaces/dev-vm-nic-0|/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "network_interface_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/networkInterfaces/dev-vm-nic-0",
            "network_security_group_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/networkSecurityGroups/dev-nsg"
          },
          "dependencies": [
            "module.compute.azurerm_network_interface.nic",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/backendAddressPools/backend-pool",
                "ip_addresses": [
                  "10.0.2.4"
                ],
                "name": "backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/frontendIPConfigurations/default-frontend-ip",
                "name": "default-frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/publicIPAddresses/dev-app-gateway-public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/gatewayIPConfigurations/default-config",
                "name": "default-config",
                "subnet_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/frontendIPConfigurations/default-frontend-ip",
                "frontend_ip_configuration_name": "default-frontend-ip",
                "frontend_port_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway",
            "identity": [],
            "location": "eastus",
            "name": "dev-app-gateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/backendAddressPools/backend-pool",
                "backend_address_pool_name": "backend-pool",
                "backend_http_settings_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/applicationGateways/dev-app-gateway/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "dev-rg-web",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.azurerm_network_interface.nic",
            "module.loadbalancer.azurerm_public_ip.app_gateway_ip",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_subnet.public",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/publicIPAddresses/dev-app-gateway-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.230.45",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-app-gateway-public-ip",
            "resource_group_name": "dev-rg-web",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "eastus",
            "name": "dev-nsg",
            "resource_group_name": "dev-rg-web",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPFromAppGateway",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "AzureCloud",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet",
            "name": "dev-private-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg-web",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet",
            "name": "dev-public-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg-web",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "04e66788-eac7-4944-a986-25d8ac438216",
            "id": "/subscriptions/5d228b2b-b879-4a16-a9a9-d0ceb7f20fe4/resourceGroups/dev-rg-web/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "eastus",
            "name": "dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-rg-web"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}